Created page with "Jedná se o nástroje pro transformaci stávajících prvků."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -112,7 +112,7 @@
 <p><span id="Part_Design_Transformation_Features_toolbar"></span>
 </p>
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_Funkc.C3.AD_transformace_n.C3.A1vrhu_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_Funkc&iacute;_transformace_n&aacute;vrhu_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta Funkc&iacute; transformace n&aacute;vrhu d&iacute;l&#367;</span></h3>
-<p>These are tools for transforming existing features.
+<p>Jedn&aacute; se o n&aacute;stroje pro transformaci st&aacute;vaj&iacute;c&iacute;ch prvk&#367;.
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirror</a>: mirrors one or more features.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Linear Pattern</a>: creates a linear pattern of one or more features.</li></ul>
@@ -195,12 +195,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213245
+Cached time: 20260119213340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.240 seconds
-Real time usage: 0.647 seconds
+Real time usage: 0.486 seconds
 Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -211,18 +211,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.258      1 -total
- 31.67%   11.167      1 Template:Userdocnavi/cs
- 29.20%   10.295      1 Template:PartDesign_Tools_navi/cs
- 12.22%    4.307      2 Template:Navigation_menu_2
- 10.58%    3.731      2 Template:Docnav
-  6.78%    2.391      1 Template:Version
-  6.71%    2.364      5 Template:VersionPlus
-  6.09%    2.147      1 Template:TOCright
-  4.56%    1.609      1 Template:MenuCommand
+100.00%   67.437      1 -total
+ 31.46%   21.217      1 Template:Userdocnavi/cs
+ 18.55%   12.511      1 Template:PartDesign_Tools_navi/cs
+ 16.44%   11.085      5 Template:VersionPlus
+ 14.15%    9.539      2 Template:Navigation_menu_2
+ 13.92%    9.388      2 Template:Docnav
+  7.19%    4.847      1 Template:Version
+  4.42%    2.978      1 Template:MenuCommand
+  3.33%    2.244      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213244 and revision id 1741311. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213339 and revision id 1741313. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
