--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -114,7 +114,7 @@
 <h3><span id="N.C3.A1strojov.C3.A1_li.C5.A1ta_Funkc.C3.AD_transformace_n.C3.A1vrhu_d.C3.ADl.C5.AF"></span><span class="mw-headline" id="N&aacute;strojov&aacute;_li&scaron;ta_Funkc&iacute;_transformace_n&aacute;vrhu_d&iacute;l&#367;">N&aacute;strojov&aacute; li&scaron;ta Funkc&iacute; transformace n&aacute;vrhu d&iacute;l&#367;</span></h3>
 <p>Jedn&aacute; se o n&aacute;stroje pro transformaci st&aacute;vaj&iacute;c&iacute;ch prvk&#367;.
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Mirror</a>: mirrors one or more features.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlen&iacute;</a>: zrcadl&iacute; jednu nebo v&iacute;ce prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Linear Pattern</a>: creates a linear pattern of one or more features.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_PolarPattern.svg&amp;filetimestamp=20170324053715&amp;.html" class="mw-file-description"><img src="../File/PartDesign_PolarPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_PolarPattern.html" title="PartDesign PolarPattern">Polar Pattern</a>: creates a polar pattern of one or more features.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MultiTransform.svg&amp;filetimestamp=20170324053740&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MultiTransform.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MultiTransform.html" title="PartDesign MultiTransform">Multi-Transform</a>: creates a pattern by combining any of the transformations mentioned above, as well as the <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">Scale</a> transformation.
@@ -195,12 +195,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213340
+Cached time: 20260119213429
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.240 seconds
-Real time usage: 0.486 seconds
+CPU time usage: 0.258 seconds
+Real time usage: 1.060 seconds
 Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -211,18 +211,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   67.437      1 -total
- 31.46%   21.217      1 Template:Userdocnavi/cs
- 18.55%   12.511      1 Template:PartDesign_Tools_navi/cs
- 16.44%   11.085      5 Template:VersionPlus
- 14.15%    9.539      2 Template:Navigation_menu_2
- 13.92%    9.388      2 Template:Docnav
-  7.19%    4.847      1 Template:Version
-  4.42%    2.978      1 Template:MenuCommand
-  3.33%    2.244      1 Template:TOCright
+100.00%  100.582      1 -total
+ 35.95%   36.157      1 Template:Userdocnavi/cs
+ 30.43%   30.603      1 Template:PartDesign_Tools_navi/cs
+ 26.61%   26.763      2 Template:Navigation_menu_2
+ 10.51%   10.576      2 Template:Docnav
+  7.89%    7.936      1 Template:TOCright
+  5.88%    5.916      1 Template:Version
+  4.45%    4.480      1 Template:MenuCommand
+  3.54%    3.565      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213339 and revision id 1741313. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213428 and revision id 1741315. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
