--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -116,7 +116,9 @@
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlen&iacute;</a>: zrcadl&iacute; jednu nebo v&iacute;ce prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Line&aacute;rn&iacute; pole</a>: vytvo&#345;&iacute; line&aacute;rn&iacute; pole jednoho nebo v&iacute;ce prvk&#367;.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_PolarPattern.svg&amp;filetimestamp=20170324053715&amp;.html" class="mw-file-description"><img src="../File/PartDesign_PolarPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_PolarPattern.html" title="PartDesign PolarPattern">Polar Pattern</a>: creates a polar pattern of one or more features.</li></ul>
+<div class="mw-translate-fuzzy">
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_PolarPattern.svg&amp;filetimestamp=20170324053715&amp;.html" class="mw-file-description"><img src="../File/PartDesign_PolarPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> [[PartDesign_PolarPattern|Kruhov&eacute; pole: vytvo&#345;&iacute; kruhov&eacute; pole jedn&eacute; nebo v&iacute;ce prvk&#367;.</li></ul>
+</div>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MultiTransform.svg&amp;filetimestamp=20170324053740&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MultiTransform.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MultiTransform.html" title="PartDesign MultiTransform">Multi-Transform</a>: creates a pattern by combining any of the transformations mentioned above, as well as the <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">Scale</a> transformation.
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Scaled.svg&amp;filetimestamp=20180131171729&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Scaled.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">Scale</a>: scales one or more features. This is not available as a separate transformation tool.</li></ul></li></ul>
 <h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
@@ -195,13 +197,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213508
+Cached time: 20260119213602
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.226 seconds
-Real time usage: 1.133 seconds
-Preprocessor visited node count: 468/1000000
+CPU time usage: 0.236 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 432/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -211,18 +213,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   73.046      1 -total
- 36.14%   26.401      1 Template:Userdocnavi/cs
- 25.15%   18.369      1 Template:PartDesign_Tools_navi/cs
- 19.58%   14.300      2 Template:Navigation_menu_2
- 12.64%    9.231      2 Template:Docnav
- 10.45%    7.630      1 Template:TOCright
-  8.14%    5.945      1 Template:MenuCommand
-  4.08%    2.983      5 Template:VersionPlus
-  1.74%    1.271      1 Template:Version
+100.00%   24.075      1 -total
+ 27.95%    6.730      1 Template:Userdocnavi/cs
+ 19.55%    4.707      1 Template:PartDesign_Tools_navi/cs
+ 17.25%    4.153      2 Template:Navigation_menu_2
+ 14.34%    3.453      1 Template:Version
+ 10.41%    2.507      2 Template:Docnav
+  7.98%    1.921      5 Template:VersionPlus
+  7.98%    1.921      1 Template:TOCright
+  7.91%    1.904      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213507 and revision id 1741317. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213602 and revision id 1741319. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
