Created page with "* [[Image:PartDesign_MultiTransform.svg|32px]] [[PartDesign_MultiTransform|Vícenásobná transformace]]: vytvoří vzor kombinací libovolných výše uvedených transformací a také transformace [[PartDesign_Scaled|měřítka]]. ** [[Image:PartDesign_Scaled.svg|32px]] [[PartDesign_Scaled|Měřítko]]: měřítko jednoho nebo více prvků. Není k dispozici jako samostatný transformační nástroj."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -117,8 +117,8 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Mirrored.svg&amp;filetimestamp=20170324053615&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Mirrored.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Mirrored.html" title="PartDesign Mirrored">Zrcadlen&iacute;</a>: zrcadl&iacute; jednu nebo v&iacute;ce prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_LinearPattern.svg&amp;filetimestamp=20170324053639&amp;.html" class="mw-file-description"><img src="../File/PartDesign_LinearPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_LinearPattern.html" title="PartDesign LinearPattern">Line&aacute;rn&iacute; pole</a>: vytvo&#345;&iacute; line&aacute;rn&iacute; pole jednoho nebo v&iacute;ce prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_PolarPattern.svg&amp;filetimestamp=20170324053715&amp;.html" class="mw-file-description"><img src="../File/PartDesign_PolarPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_PolarPattern.html" title="PartDesign PolarPattern">Kruhov&eacute; pole</a>: vytvo&#345;&iacute; kruhov&eacute; pole jednoho nebo v&iacute;ce prvk&#367;.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MultiTransform.svg&amp;filetimestamp=20170324053740&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MultiTransform.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MultiTransform.html" title="PartDesign MultiTransform">Multi-Transform</a>: creates a pattern by combining any of the transformations mentioned above, as well as the <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">Scale</a> transformation.
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Scaled.svg&amp;filetimestamp=20180131171729&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Scaled.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">Scale</a>: scales one or more features. This is not available as a separate transformation tool.</li></ul></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MultiTransform.svg&amp;filetimestamp=20170324053740&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MultiTransform.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MultiTransform.html" title="PartDesign MultiTransform">V&iacute;cen&aacute;sobn&aacute; transformace</a>: vytvo&#345;&iacute; vzor kombinac&iacute; libovoln&yacute;ch v&yacute;&scaron;e uveden&yacute;ch transformac&iacute; a tak&eacute; transformace <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">m&#283;&#345;&iacute;tka</a>.
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Scaled.svg&amp;filetimestamp=20180131171729&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Scaled.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">M&#283;&#345;&iacute;tko</a>: m&#283;&#345;&iacute;tko jednoho nebo v&iacute;ce prvk&#367;. Nen&iacute; k dispozici jako samostatn&yacute; transforma&#269;n&iacute; n&aacute;stroj.</li></ul></li></ul>
 <h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
 <p>Some additional tools available in the Part Design menu:
 </p>
@@ -195,12 +195,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119213818
+Cached time: 20260119214016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.209 seconds
-Real time usage: 0.329 seconds
+CPU time usage: 0.227 seconds
+Real time usage: 0.672 seconds
 Preprocessor visited node count: 468/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -211,18 +211,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   32.858      1 -total
- 24.98%    8.209      1 Template:PartDesign_Tools_navi/cs
- 24.79%    8.145      1 Template:Userdocnavi/cs
- 17.40%    5.718      5 Template:VersionPlus
- 13.65%    4.484      2 Template:Navigation_menu_2
-  8.05%    2.645      1 Template:TOCright
-  7.83%    2.574      1 Template:Version
-  7.45%    2.448      1 Template:MenuCommand
-  6.52%    2.143      2 Template:Docnav
+100.00%   30.474      1 -total
+ 32.99%   10.053      1 Template:Userdocnavi/cs
+ 28.67%    8.738      1 Template:PartDesign_Tools_navi/cs
+ 16.40%    4.997      2 Template:Navigation_menu_2
+ 10.49%    3.195      5 Template:VersionPlus
+  7.24%    2.205      1 Template:MenuCommand
+  6.77%    2.063      2 Template:Docnav
+  6.49%    1.977      1 Template:Version
+  4.54%    1.382      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119213817 and revision id 1741323. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214015 and revision id 1741325. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
