--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -119,7 +119,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_PolarPattern.svg&amp;filetimestamp=20170324053715&amp;.html" class="mw-file-description"><img src="../File/PartDesign_PolarPattern.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_PolarPattern.html" title="PartDesign PolarPattern">Kruhov&eacute; pole</a>: vytvo&#345;&iacute; kruhov&eacute; pole jednoho nebo v&iacute;ce prvk&#367;.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MultiTransform.svg&amp;filetimestamp=20170324053740&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MultiTransform.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MultiTransform.html" title="PartDesign MultiTransform">V&iacute;cen&aacute;sobn&aacute; transformace</a>: vytvo&#345;&iacute; vzor kombinac&iacute; libovoln&yacute;ch v&yacute;&scaron;e uveden&yacute;ch transformac&iacute; a tak&eacute; transformace <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">m&#283;&#345;&iacute;tka</a>.
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Scaled.svg&amp;filetimestamp=20180131171729&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Scaled.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Scaled.html" title="PartDesign Scaled">M&#283;&#345;&iacute;tko</a>: m&#283;&#345;&iacute;tko jednoho nebo v&iacute;ce prvk&#367;. Nen&iacute; k dispozici jako samostatn&yacute; transforma&#269;n&iacute; n&aacute;stroj.</li></ul></li></ul>
-<h3><span class="mw-headline" id="Additional_tools">Additional tools</span></h3>
+<p><span id="Additional_tools"></span>
+</p>
+<h3><span id="Dodate.C4.8Dn.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dodate&#269;n&eacute;_n&aacute;stroje">Dodate&#269;n&eacute; n&aacute;stroje</span></h3>
 <p>Some additional tools available in the Part Design menu:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_ShapeBinder.svg&amp;filetimestamp=20170324054939&amp;.html" class="mw-file-description"><img src="../File/PartDesign_ShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_ShapeBinder.html" title="PartDesign ShapeBinder">Shape Binder</a>: creates a shape binder referencing geometry from a single parent object.</li></ul>
@@ -195,13 +197,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119214016
+Cached time: 20260119214042
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.227 seconds
-Real time usage: 0.672 seconds
-Preprocessor visited node count: 468/1000000
+CPU time usage: 0.191 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 469/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -211,18 +213,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.474      1 -total
- 32.99%   10.053      1 Template:Userdocnavi/cs
- 28.67%    8.738      1 Template:PartDesign_Tools_navi/cs
- 16.40%    4.997      2 Template:Navigation_menu_2
- 10.49%    3.195      5 Template:VersionPlus
-  7.24%    2.205      1 Template:MenuCommand
-  6.77%    2.063      2 Template:Docnav
-  6.49%    1.977      1 Template:Version
-  4.54%    1.382      1 Template:TOCright
+100.00%   20.247      1 -total
+ 30.00%    6.074      1 Template:PartDesign_Tools_navi/cs
+ 26.15%    5.294      1 Template:Userdocnavi/cs
+ 15.26%    3.090      2 Template:Navigation_menu_2
+ 10.98%    2.224      2 Template:Docnav
+  8.80%    1.782      5 Template:VersionPlus
+  7.56%    1.531      1 Template:Version
+  6.34%    1.283      1 Template:TOCright
+  6.14%    1.244      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214015 and revision id 1741325. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214041 and revision id 1741327. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
