--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -122,7 +122,7 @@
 <p><span id="Additional_tools"></span>
 </p>
 <h3><span id="Dodate.C4.8Dn.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dodate&#269;n&eacute;_n&aacute;stroje">Dodate&#269;n&eacute; n&aacute;stroje</span></h3>
-<p>Some additional tools available in the Part Design menu:
+<p>N&#283;kter&eacute; dal&scaron;&iacute; n&aacute;stroje dostupn&eacute; v menu Part Design:
 </p>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_ShapeBinder.svg&amp;filetimestamp=20170324054939&amp;.html" class="mw-file-description"><img src="../File/PartDesign_ShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_ShapeBinder.html" title="PartDesign ShapeBinder">Shape Binder</a>: creates a shape binder referencing geometry from a single parent object.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_InvoluteGear.svg&amp;filetimestamp=20240405093112&amp;.html" class="mw-file-description"><img src="../File/PartDesign_InvoluteGear.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_InvoluteGear.html" title="PartDesign InvoluteGear">Involute Gear</a>: creates an involute gear profile that can be padded.</li></ul>
@@ -197,12 +197,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119214042
+Cached time: 20260119214115
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.191 seconds
-Real time usage: 0.366 seconds
+CPU time usage: 0.215 seconds
+Real time usage: 0.386 seconds
 Preprocessor visited node count: 469/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -213,18 +213,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.247      1 -total
- 30.00%    6.074      1 Template:PartDesign_Tools_navi/cs
- 26.15%    5.294      1 Template:Userdocnavi/cs
- 15.26%    3.090      2 Template:Navigation_menu_2
- 10.98%    2.224      2 Template:Docnav
-  8.80%    1.782      5 Template:VersionPlus
-  7.56%    1.531      1 Template:Version
-  6.34%    1.283      1 Template:TOCright
-  6.14%    1.244      1 Template:MenuCommand
+100.00%   24.675      1 -total
+ 33.33%    8.225      1 Template:Userdocnavi/cs
+ 21.90%    5.404      1 Template:PartDesign_Tools_navi/cs
+ 19.97%    4.927      2 Template:Navigation_menu_2
+ 11.53%    2.846      1 Template:Version
+ 11.43%    2.820      2 Template:Docnav
+  7.46%    1.840      1 Template:TOCright
+  6.20%    1.530      5 Template:VersionPlus
+  4.28%    1.057      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214041 and revision id 1741327. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214115 and revision id 1741329. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
