Created page with "* [[File:PartDesign_ShapeBinder.svg|32px]] [[PartDesign_ShapeBinder|Pořadač tvarů]]: vytvoří pořadač tvarů odkazující na geometrii z jednoho nadřazeného objektu."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -124,7 +124,7 @@
 <h3><span id="Dodate.C4.8Dn.C3.A9_n.C3.A1stroje"></span><span class="mw-headline" id="Dodate&#269;n&eacute;_n&aacute;stroje">Dodate&#269;n&eacute; n&aacute;stroje</span></h3>
 <p>N&#283;kter&eacute; dal&scaron;&iacute; n&aacute;stroje dostupn&eacute; v menu Part Design:
 </p>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_ShapeBinder.svg&amp;filetimestamp=20170324054939&amp;.html" class="mw-file-description"><img src="../File/PartDesign_ShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_ShapeBinder.html" title="PartDesign ShapeBinder">Shape Binder</a>: creates a shape binder referencing geometry from a single parent object.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_ShapeBinder.svg&amp;filetimestamp=20170324054939&amp;.html" class="mw-file-description"><img src="../File/PartDesign_ShapeBinder.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_ShapeBinder.html" title="PartDesign ShapeBinder">Po&#345;ada&#269; tvar&#367;</a>: vytvo&#345;&iacute; po&#345;ada&#269; tvar&#367; odkazuj&iacute;c&iacute; na geometrii z jednoho nad&#345;azen&eacute;ho objektu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_InvoluteGear.svg&amp;filetimestamp=20240405093112&amp;.html" class="mw-file-description"><img src="../File/PartDesign_InvoluteGear.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_InvoluteGear.html" title="PartDesign InvoluteGear">Involute Gear</a>: creates an involute gear profile that can be padded.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Sprocket.svg&amp;filetimestamp=20240405092958&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Sprocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Sprocket.html" title="PartDesign Sprocket">Sprocket</a>: creates a sprocket profile that can be padded.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_WizardShaft.svg&amp;filetimestamp=20240528082352&amp;.html" class="mw-file-description"><img src="../File/PartDesign_WizardShaft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_WizardShaft.html" title="PartDesign WizardShaft">Shaft Design Wizard</a>: Generates a shaft from a table of values and allows to analyze forces and moments. The shaft is made with a revolved sketch that can be edited.</li></ul>
@@ -197,12 +197,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119214115
+Cached time: 20260119214313
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.215 seconds
-Real time usage: 0.386 seconds
+CPU time usage: 0.248 seconds
+Real time usage: 0.746 seconds
 Preprocessor visited node count: 469/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -213,18 +213,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.675      1 -total
- 33.33%    8.225      1 Template:Userdocnavi/cs
- 21.90%    5.404      1 Template:PartDesign_Tools_navi/cs
- 19.97%    4.927      2 Template:Navigation_menu_2
- 11.53%    2.846      1 Template:Version
- 11.43%    2.820      2 Template:Docnav
-  7.46%    1.840      1 Template:TOCright
-  6.20%    1.530      5 Template:VersionPlus
-  4.28%    1.057      1 Template:MenuCommand
+100.00%   67.276      1 -total
+ 28.68%   19.293      1 Template:PartDesign_Tools_navi/cs
+ 27.93%   18.792      1 Template:TOCright
+ 22.83%   15.357      1 Template:Userdocnavi/cs
+ 15.51%   10.435      2 Template:Navigation_menu_2
+  9.10%    6.123      2 Template:Docnav
+  3.56%    2.395      1 Template:MenuCommand
+  3.32%    2.237      1 Template:Version
+  3.22%    2.164      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214115 and revision id 1741329. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214312 and revision id 1741331. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
