--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -128,7 +128,9 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_InvoluteGear.svg&amp;filetimestamp=20240405093112&amp;.html" class="mw-file-description"><img src="../File/PartDesign_InvoluteGear.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_InvoluteGear.html" title="PartDesign InvoluteGear">Evolventn&iacute; ozuben&eacute; kolo</a>: vytvo&#345;&iacute; profil evolventn&iacute;ho ozuben&eacute;ho kola, kter&yacute; lze vyplnit.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Sprocket.svg&amp;filetimestamp=20240405092958&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Sprocket.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Sprocket.html" title="PartDesign Sprocket">&#344;et&#283;zov&eacute; kolo</a>: vytvo&#345;&iacute; profil &#345;et&#283;zov&eacute;ho kola, kter&yacute; lze vyplnit.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_WizardShaft.svg&amp;filetimestamp=20240528082352&amp;.html" class="mw-file-description"><img src="../File/PartDesign_WizardShaft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_WizardShaft.html" title="PartDesign WizardShaft">Pr&#367;vodce konstrukc&iacute; h&#345;&iacute;dele</a>: Generuje h&#345;&iacute;del z tabulky hodnot a umo&#382;&#328;uje analyzovat s&iacute;ly a momenty. H&#345;&iacute;del je vytvo&#345;ena pomoc&iacute; oto&#269;en&eacute; skici, kterou lze upravovat.</li></ul>
-<h3><span class="mw-headline" id="Context_menu">Context menu</span></h3>
+<p><span id="Context_menu"></span>
+</p>
+<h2><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h2>
 <ul><li><a href="../index.php?title=PartDesign_Suppressed&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Suppressed (page does not exist)">Suppressed</a>: checkbox to disable a specific feature without deleting it. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveTip.svg&amp;filetimestamp=20240405093058&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveTip.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveTip.html" title="PartDesign MoveTip">Set Tip</a>: redefines the tip, which is the feature exposed outside of the Body.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeature.svg&amp;filetimestamp=20240405093125&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeature.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeature.html" title="PartDesign MoveFeature">Move Object To&hellip;</a>: moves the selected sketch, datum geometry or feature to another Body.</li></ul>
@@ -197,13 +199,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119214521
+Cached time: 20260119214534
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.194 seconds
-Real time usage: 0.383 seconds
-Preprocessor visited node count: 469/1000000
+CPU time usage: 0.235 seconds
+Real time usage: 0.825 seconds
+Preprocessor visited node count: 470/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
 Highest expansion depth: 5/100
@@ -213,18 +215,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.386      1 -total
- 30.62%    7.466      1 Template:Userdocnavi/cs
- 27.61%    6.733      1 Template:PartDesign_Tools_navi/cs
- 20.70%    5.047      2 Template:Navigation_menu_2
- 12.16%    2.965      5 Template:VersionPlus
-  8.23%    2.008      2 Template:Docnav
-  4.56%    1.113      1 Template:TOCright
-  4.25%    1.036      1 Template:Version
-  4.19%    1.021      1 Template:MenuCommand
+100.00%   77.816      1 -total
+ 31.83%   24.770      1 Template:Userdocnavi/cs
+ 24.51%   19.073      1 Template:PartDesign_Tools_navi/cs
+ 13.78%   10.725      2 Template:Navigation_menu_2
+  9.98%    7.765      1 Template:MenuCommand
+  9.86%    7.673      1 Template:Version
+  8.05%    6.266      1 Template:TOCright
+  7.41%    5.764      2 Template:Docnav
+  4.24%    3.301      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214521 and revision id 1741337. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119214533 and revision id 1741339. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
