Created page with "* [[File:PartDesign_MoveFeature.svg|32px]] [[PartDesign_MoveFeature|Přesunout objekt do…]]: přesune vybraný náčrt, referenční geometrii nebo prvek do jiného tělesa."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -133,7 +133,7 @@
 <h2><span id="Kontextov.C3.A9_menu"></span><span class="mw-headline" id="Kontextov&eacute;_menu">Kontextov&eacute; menu</span></h2>
 <ul><li><a href="../index.php?title=PartDesign_Suppressed&amp;action=edit&amp;redlink=1.html" class="new" title="PartDesign Suppressed (page does not exist)">Potla&#269;it</a>: za&scaron;krt&aacute;vac&iacute; pol&iacute;&#269;ko pro deaktivaci konkr&eacute;tn&iacute;ho prvku bez jeho odstran&#283;n&iacute;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveTip.svg&amp;filetimestamp=20240405093058&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveTip.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveTip.html" title="PartDesign MoveTip">Nastavit Tip</a>: p&#345;edefinuje tip, co&#382; je prvek vystaven&yacute; mimo t&#283;lo.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeature.svg&amp;filetimestamp=20240405093125&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeature.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeature.html" title="PartDesign MoveFeature">Move Object To&hellip;</a>: moves the selected sketch, datum geometry or feature to another Body.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeature.svg&amp;filetimestamp=20240405093125&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeature.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeature.html" title="PartDesign MoveFeature">P&#345;esunout objekt do&hellip;</a>: p&#345;esune vybran&yacute; n&aacute;&#269;rt, referen&#269;n&iacute; geometrii nebo prvek do jin&eacute;ho t&#283;lesa.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_MoveFeatureInTree.svg&amp;filetimestamp=20210122023739&amp;.html" class="mw-file-description"><img src="../File/PartDesign_MoveFeatureInTree.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_MoveFeatureInTree.html" title="PartDesign MoveFeatureInTree">Move Feature After&hellip;</a>: allows reordering of the Body tree by moving the selected sketch, datum geometry or feature to another position in the list of features.</li></ul>
 <h3><span class="mw-headline" id="Obsolete_tools">Obsolete tools</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=PartDesign_Plane.svg&amp;filetimestamp=20170324054826&amp;.html" class="mw-file-description"><img src="../File/PartDesign_Plane.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Plane.html" title="PartDesign Plane">Create a datum plane</a>: creates a datum plane in the active body. This tool is not available in <span style="font-size:small;color:green;">1.1 and above</span>.</li></ul>
@@ -199,12 +199,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215435
+Cached time: 20260119215503
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.208 seconds
-Real time usage: 0.399 seconds
+CPU time usage: 0.270 seconds
+Real time usage: 0.868 seconds
 Preprocessor visited node count: 470/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -215,18 +215,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.689      1 -total
- 28.86%    7.992      1 Template:Userdocnavi/cs
- 28.56%    7.909      1 Template:TOCright
- 17.35%    4.805      2 Template:Navigation_menu_2
- 16.97%    4.698      1 Template:PartDesign_Tools_navi/cs
-  7.42%    2.055      2 Template:Docnav
-  6.13%    1.698      5 Template:VersionPlus
-  4.63%    1.282      1 Template:MenuCommand
-  4.31%    1.192      1 Template:Version
+100.00%   59.094      1 -total
+ 34.58%   20.434      1 Template:PartDesign_Tools_navi/cs
+ 26.27%   15.526      1 Template:Userdocnavi/cs
+ 21.94%   12.964      2 Template:Navigation_menu_2
+  8.25%    4.877      1 Template:Version
+  7.71%    4.555      2 Template:Docnav
+  6.74%    3.983      1 Template:TOCright
+  5.89%    3.483      1 Template:MenuCommand
+  4.78%    2.822      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215435 and revision id 1741345. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215502 and revision id 1741347. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
