Created page with "<!--The PartDesign preferences are defined in the Part workbench and both the PartDesign workbench and the Part workbench use them--> * [[File:Preferences-part_design.svg|32px]] [[PartDesign_Preferences|Předvolby]]: předvolby pro pracovní prostředí PartDesign. * [[Fine-tuning#PartDesign_Workbench|Jemné doladění]]: některé další parametry pro jemné doladění chování nástroje PartDesign."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -146,8 +146,8 @@
 <p><span id="Preferences"></span>
 </p>
 <h2><span id="P.C5.99edvolby"></span><span class="mw-headline" id="P&#345;edvolby">P&#345;edvolby</span></h2>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Preferences-part_design.svg&amp;filetimestamp=20251116144535&amp;.html" class="mw-file-description"><img src="../File/Preferences-part_design.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Preferences.html" title="PartDesign Preferences">Preferences</a>: preferences for the PartDesign Workbench.</li>
-<li><a href="../Fine-tuning.html#PartDesign_Workbench" title="Fine-tuning">Fine tuning</a>: some extra parameters to fine-tune PartDesign behavior.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Preferences-part_design.svg&amp;filetimestamp=20251116144535&amp;.html" class="mw-file-description"><img src="../File/Preferences-part_design.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Preferences.html" title="PartDesign Preferences">P&#345;edvolby</a>: p&#345;edvolby pro pracovn&iacute; prost&#345;ed&iacute; PartDesign.</li>
+<li><a href="../Fine-tuning.html#PartDesign_Workbench" title="Fine-tuning">Jemn&eacute; dolad&#283;n&iacute;</a>: n&#283;kter&eacute; dal&scaron;&iacute; parametry pro jemn&eacute; dolad&#283;n&iacute; chov&aacute;n&iacute; n&aacute;stroje PartDesign.</li></ul>
 <h2><span class="mw-headline" id="Tutorials">Tutorials</span></h2>
 <ul><li><a rel="nofollow" class="external text" href="http://help-freecad-jpg87.fr/">How to use FreeCAD</a>, a website describing the workflow for mechanical design.</li>
 <li><a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Creating a simple part with PartDesign</a></li>
@@ -203,12 +203,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119215903
+Cached time: 20260119220135
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.248 seconds
-Real time usage: 0.729 seconds
+CPU time usage: 0.244 seconds
+Real time usage: 0.695 seconds
 Preprocessor visited node count: 472/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -219,18 +219,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   74.488      1 -total
- 23.76%   17.695      1 Template:PartDesign_Tools_navi/cs
- 21.94%   16.343      1 Template:MenuCommand
- 20.50%   15.273      1 Template:Userdocnavi/cs
-  8.29%    6.173      5 Template:VersionPlus
-  7.51%    5.595      2 Template:Docnav
-  6.94%    5.166      1 Template:TOCright
-  6.90%    5.138      2 Template:Navigation_menu_2
-  5.68%    4.232      1 Template:Version
+100.00%   47.744      1 -total
+ 29.71%   14.184      1 Template:Userdocnavi/cs
+ 27.01%   12.895      1 Template:Version
+ 14.84%    7.083      1 Template:PartDesign_Tools_navi/cs
+ 14.27%    6.813      2 Template:Navigation_menu_2
+  9.61%    4.589      1 Template:MenuCommand
+  6.16%    2.941      2 Template:Docnav
+  5.31%    2.535      1 Template:TOCright
+  4.97%    2.371      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119215902 and revision id 1741363. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220134 and revision id 1741365. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
