Created page with "* [http://help-freecad-jpg87.fr/ Jak používat FreeCAD], webová stránka popisující pracovní postup při mechanickém navrhování. * [[Creating_a_simple_part_with_PartDesign|Vytvoření jednoduché součásti pomocí PartDesign]] * [[Basic_Part_Design_Tutorial_019|Základní návrh dílů – výukový program 019]] * [[PartDesign_Bearingholder_Tutorial_I|Návod k použití držáku ložiska I]] (vyžaduje aktualizaci) * PartDesign_Bearingholder_Tutorial_II|Návo..."

--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -151,11 +151,11 @@
 <p><span id="Tutorials"></span>
 </p>
 <h2><span id="N.C3.A1vody"></span><span class="mw-headline" id="N&aacute;vody">N&aacute;vody</span></h2>
-<ul><li><a rel="nofollow" class="external text" href="http://help-freecad-jpg87.fr/">How to use FreeCAD</a>, a website describing the workflow for mechanical design.</li>
-<li><a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Creating a simple part with PartDesign</a></li>
-<li><a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Basic Part Design Tutorial 019</a></li>
-<li><a href="../PartDesign_Bearingholder_Tutorial_I.html" title="PartDesign Bearingholder Tutorial I">PartDesign Bearingholder Tutorial I</a> (needs updating)</li>
-<li><a href="../PartDesign_Bearingholder_Tutorial_II.html" title="PartDesign Bearingholder Tutorial II">PartDesign Bearingholder Tutorial II</a> (needs updating)</li></ul>
+<ul><li><a rel="nofollow" class="external text" href="http://help-freecad-jpg87.fr/">Jak pou&#382;&iacute;vat FreeCAD</a>, webov&aacute; str&aacute;nka popisuj&iacute;c&iacute; pracovn&iacute; postup p&#345;i mechanick&eacute;m navrhov&aacute;n&iacute;.</li>
+<li><a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Vytvo&#345;en&iacute; jednoduch&eacute; sou&#269;&aacute;sti pomoc&iacute; PartDesign</a></li>
+<li><a href="../Basic_Part_Design_Tutorial_019.html" title="Basic Part Design Tutorial 019">Z&aacute;kladn&iacute; n&aacute;vrh d&iacute;l&#367; &ndash; v&yacute;ukov&yacute; program 019</a></li>
+<li><a href="../PartDesign_Bearingholder_Tutorial_I.html" title="PartDesign Bearingholder Tutorial I">N&aacute;vod k pou&#382;it&iacute; dr&#382;&aacute;ku lo&#382;iska I</a> (vy&#382;aduje aktualizaci)</li>
+<li><a href="../PartDesign_Bearingholder_Tutorial_II.html" title="PartDesign Bearingholder Tutorial II">N&aacute;vod na v&yacute;robu dr&#382;&aacute;ku lo&#382;iska II</a> (vy&#382;aduje aktualizaci)</li></ul>
 <h2><span class="mw-headline" id="Examples">Examples</span></h2>
 <p>For some ideas of what can be achieved with Part Design tools, have a look at: <a href="../PartDesign_Examples.html" title="PartDesign Examples">PartDesign examples</a>.
 </p><p><span typeof="mw:File"><span><img src="../File/PartDesign_ExampleSphere-02.png" decoding="async" width="80" height="60" class="mw-file-element" data-file-width="800" data-file-height="600"></span></span>
@@ -205,12 +205,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119220149
+Cached time: 20260119220636
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.213 seconds
-Real time usage: 0.312 seconds
+CPU time usage: 0.230 seconds
+Real time usage: 0.395 seconds
 Preprocessor visited node count: 473/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -221,18 +221,18 @@ Unstrip post&#8208;expand size: 4425/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.045      1 -total
- 27.81%    5.297      1 Template:Userdocnavi/cs
- 27.34%    5.206      1 Template:PartDesign_Tools_navi/cs
- 16.79%    3.198      2 Template:Navigation_menu_2
- 12.56%    2.392      2 Template:Docnav
-  9.08%    1.729      1 Template:Version
-  7.62%    1.451      5 Template:VersionPlus
-  6.91%    1.316      1 Template:TOCright
-  4.44%    0.845      1 Template:MenuCommand
+100.00%   23.208      1 -total
+ 29.78%    6.912      1 Template:Userdocnavi/cs
+ 25.13%    5.831      1 Template:PartDesign_Tools_navi/cs
+ 16.14%    3.746      2 Template:Navigation_menu_2
+  9.21%    2.138      2 Template:Docnav
+  8.48%    1.969      1 Template:Version
+  8.26%    1.916      1 Template:MenuCommand
+  8.02%    1.861      1 Template:TOCright
+  6.77%    1.571      5 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220149 and revision id 1741367. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220635 and revision id 1741369. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
